--- a/EjemploRecopilación/app/src/main/res/layout/activity_main.xml
+++ b/EjemploRecopilación/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,8 @@
         android:layout_marginTop="25dp"
         android:layout_below="@+id/checkBoxCajaRegalo"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:inputType="numberDecimal"/>
 
     <Button
         android:layout_width="wrap_content"
