--- a/NavigationView/app/src/main/res/values/colors.xml
+++ b/NavigationView/app/src/main/res/values/colors.xml
@@ -3,7 +3,20 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorRojo">#ff0000</color>
-    <color name="colorVerde">#00ff22</color>
-    <color name="colorNaranja">#ff8400</color>
+    <color name="colorPrimaryRojo">#F44336</color>
+    <color name="colorPrimaryDarkRojo">#D32F2F</color>
+    <color name="colorAccentRojo">#FF8A80</color>
+    <color name="colorPrimaryAmarillo">#FFEB3B</color>
+    <color name="colorPrimaryDarkAmarillo">#FBC02D</color>
+    <color name="colorAccentAmarillo">#FFFF8D</color>
+    <color name="colorPrimaryOrange">#FF5722</color>
+    <color name="colorPrimaryDarkOrange">#E64A19</color>
+    <color name="colorAccentOrange">#FF9E80</color>
+    <color name="colorPrimaryLime">#CDDC39</color>
+    <color name="colorPrimaryDarkLime">#AFB42B</color>
+    <color name="colorAccentLime">#F4FF81</color>
+    <color name="colorPrimaryTeal">#009688</color>
+    <color name="colorPrimaryDarkTeal">#00796B</color>
+    <color name="colorAccentTeal">#A7FFEB</color>
+    <color name="colorNeutro">#ffcf9c</color>
 </resources>
