--- a/Dialogos/app/src/main/res/layout/dialogo_personalizado.xml
+++ b/Dialogos/app/src/main/res/layout/dialogo_personalizado.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <android.support.design.widget.TextInputEditText
+            <EditText
                 android:id="@+id/ti_et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:inputType="textPersonName"/>
 
-            <android.support.design.widget.TextInputEditText
+            <EditText
                 android:id="@+id/ti_et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
