--- a/EjercicioFragmentoDinamico/app/src/main/res/layout/activity_main.xml
+++ b/EjercicioFragmentoDinamico/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,11 @@
     android:padding="4dp"
     tools:context="com.example.jorch.ejerciciofragmentodinamico.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/container_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.5"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,8 +27,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NUEVO FRAGMENTO"/>
-    <FrameLayout
-        android:id="@+id/container_fragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DIALOGO FRAGMENT"
+            android:id="@+id/bttn_mostrar_dialogo_fragment"
+            android:layout_weight="1"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DIALOGO NORMAL"
+            android:id="@+id/bttn_mostrar_dialogo_normal"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
