--- a/AulaVirtual/app/src/main/res/values/styles.xml
+++ b/AulaVirtual/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="AppTheme.Aula" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -21,17 +22,29 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowBackground">@color/colorFondoLogin</item>
     </style>
+
     <style name="LoginTextField" parent="AppTheme">
         <item name="android:textColorHint">@android:color/white</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="colorControlActivated">@android:color/white</item>
     </style>
+
     <style name="CrearCuentaTextField" parent="AppTheme">
         <item name="android:textColorHint">@android:color/darker_gray</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="colorControlActivated">@android:color/darker_gray</item>
     </style>
+
     <style name="WhiteProgress">
         <item name="colorAccent">@android:color/white</item>
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
