--- a/AulaVirtual/app/src/main/res/layout/dialog_crear_cuenta.xml
+++ b/AulaVirtual/app/src/main/res/layout/dialog_crear_cuenta.xml
@@ -4,7 +4,7 @@
     android:focusableInTouchMode="true"
     android:focusable="true"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
-    android:padding="25dp">
+    android:padding="23dp">
 
     <TextView
         android:text="REGISTRO USUARIO"
@@ -13,29 +13,18 @@
         android:id="@+id/tv_crear_cuenta_titulo"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textStyle="normal|bold"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_centerHorizontal="true" />
     <Spinner
         android:id="@+id/sp_crear_cuenta"
-        android:layout_width="190dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/spinner_rol"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/tv_crear_cuenta_titulo"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:text="SELECCIONA ROL:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_crear_cuenta_titulo_rol"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/sp_crear_cuenta"
-        android:layout_above="@+id/til_crear_cuenta_usuario" />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_crear_cuenta_usuario"
         android:layout_width="match_parent"
@@ -101,4 +90,15 @@
         android:layout_below="@+id/til_crear_cuenta_correo"
         android:layout_alignParentStart="true"
         android:textColor="@color/colorAccent" />
+
+    <TextView
+        android:text="SELECCIONA ROL:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_crear_cuenta_titulo_rol"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="14dp"
+        android:layout_alignBaseline="@+id/sp_crear_cuenta"
+        android:layout_alignBottom="@+id/sp_crear_cuenta"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
