--- a/AulaVirtual/app/src/main/res/layout/cardview_curso.xml
+++ b/AulaVirtual/app/src/main/res/layout/cardview_curso.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_curso"
     android:layout_width="match_parent"
     app:cardElevation="4dp"
     app:cardCornerRadius="4dp"
