--- a/AulaVirtual/app/src/main/res/layout/activity_aula.xml
+++ b/AulaVirtual/app/src/main/res/layout/activity_aula.xml
@@ -23,7 +23,7 @@
                 android:theme="@style/AppTheme.AppBarOverlay">
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar_aula"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:title="AULA VIRTUAL"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
