--- a/AulaVirtual/app/src/main/res/layout/activity_listado_cursos.xml
+++ b/AulaVirtual/app/src/main/res/layout/activity_listado_cursos.xml
@@ -1,37 +1,33 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jorch.proyecto.aulavirtual.ui.AsignaturasProfesorActivity">
+    tools:context="com.jorch.proyecto.aulavirtual.ui.ListadoCursosActivity">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_asignaturas_alumno"
+            android:id="@+id/toolbar_listado_cursos"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="ASIGNATURAS DEL CURSO"
+            app:title="LISTA DE CURSOS CREADOS"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
     </android.support.design.widget.AppBarLayout>
     <RelativeLayout
-        android:id="@+id/content_asignaturas_alumno"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipeRefreshRecyclerView_asignaturas_alumno"
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                android:id="@+id/rv_cursos_asignaturas_alumno"/>
-        </android.support.v4.widget.SwipeRefreshLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:id="@+id/rv_listado_cursos"/>
+
     </RelativeLayout>
 </LinearLayout>
